--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="https://github.com/anfederico/Flaskex/raw/master/media/flaskex-logo.png" alt="Flaskex">
-        <h6 href="/" class="subtitle"><strong>Flaskex</strong></h6>
+        <img src="/Users/hart-davis/Desktop/Masters/website/Flaskex/media/logo_hd.png" alt="Flaskex">
+        <h6 href="/" class="subtitle"><strong>HD SAR</strong></h6>
       </a>
       <div id="navbar-burger-id" class="navbar-burger burger" data-target="navbar-menu-id">
         <span></span>
@@ -54,11 +54,10 @@
       <div class="columns">
         <div class="column is-auto">
           <br>
-          <p class="title is-2">Flaskex</p>
-          <p class="subtitle is-4"><i>Simple example for rapid prototyping</i></p>
-          <p class="subtitle is-5">&#x2022 Encrypted user authorizaton</p>
-          <p class="subtitle is-5">&#x2022 Ready to go database system</p>
-          <p class="subtitle is-5">&#x2022 User login, signup, and settings</p>           
+          <p class="title is-2">HD Search and Rescue</p>
+          <p class="subtitle is-4"><i>Operational Search and Rescue </i></p>
+          <p class="subtitle is-5">&#x2022 Realtime</p>
+          <p class="subtitle is-5">&#x2022 User login, signup, and start searching</p>           
         </div>
         <div class="column is-auto">
           <div id="signup-box" class="signup-box">
@@ -114,19 +113,19 @@
     <div class="container">
       <div class="content has-text-centered">
         <p>
-          <strong>Flaskex</strong> by Anthony Federico
+          <strong>HD Oceanography</strong> by Michael Hart-Davis
           <span class="icon is-small">
             <i class="fa fa-copyright"></i>
-          </span>2017</a>
+          </span>2018</a>
         </p>
         <p>
-          <a class="icon has-text-primary" href="http://anfederico.github.io" target="_blank">
-            <i class="fa fa-globe"></i>
+          <a class="icon has-text-primary" href="https://twitter.com/hartdavismhd" target="_blank">
+            <i class="fa fa-twitter"></i>
           </a>          
-          <a class="icon has-text-primary" href="https://github.com/anfederico" target="_blank">
+          <a class="icon has-text-primary" href="https://github.com/hart-davis/" target="_blank">
             <i class="fa fa-github"></i>
           </a>
-          <a class="icon has-text-primary" href="mailto:anfed@bu.edu" target="_blank">
+          <a class="icon has-text-primary" href="mailto:mhartd@gmail.com" target="_blank">
             <i class="fa fa-envelope"></i>
           </a>
         </p>
