--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="/Users/hart-davis/Desktop/Masters/website/Flaskex/media/logo_hd.png" alt="Flaskex">
-        <h6 href="/" class="subtitle"><strong>HD SAR</strong></h6>
+        <img src="https://github.com/hart-davis/Flaskex/blob/master/media/logo_hd.png?raw=true" alt="Flaskex">
+        <h6 href="/" class="subtitle"><strong>HD Oceanography</strong></h6>
       </a>
       <div id="navbar-burger-id" class="navbar-burger burger" data-target="navbar-menu-id">
         <span></span>
@@ -54,8 +54,9 @@
       <div class="columns">
         <div class="column is-auto">
           <br>
-          <p class="title is-2">HD Search and Rescue</p>
-          <p class="subtitle is-4"><i>Operational Search and Rescue </i></p>
+          <p class="title is-2">HD Oceanography</p>
+          <img src="https://github.com/hart-davis/Flaskex/blob/master/media/logo_hd.png?raw=true">
+          <p class="subtitle is-5"><i>Operational Search and Rescue </i></p>
           <p class="subtitle is-5">&#x2022 Realtime</p>
           <p class="subtitle is-5">&#x2022 User login, signup, and start searching</p>           
         </div>
